--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,4 @@
+baseURL = "https://andikadinata.tech"
 languageCode = "id-ID"
 title = "Andika Dinata's blog."
 author = "Andika Dinata"
@@ -18,3 +19,10 @@ identifier = "about"
 name = "About"
 url = "/about"
 weight = 10
+
+[params.giscus]
+repo = "thepastlife/blog"
+repoId = "R_kgDOPdIO7g"
+category = "General"
+categoryId = "DIC_kwDOPdIO7s4CuHsy"
+mapping = "url"
