--- a/hugo.toml
+++ b/hugo.toml
@@ -26,3 +26,7 @@ repoId = "R_kgDOPdIO7g"
 category = "General"
 categoryId = "DIC_kwDOPdIO7s4CuHsy"
 mapping = "url"
+lang = "en"
+reactions-enabled = "1"
+input-position = "top"
+loading = "lazy"
