--- a/hugo.toml
+++ b/hugo.toml
@@ -22,14 +22,14 @@ weight = 10
 
 [params.giscus]
 repo = "thepastlife/blog"
-repo-id = "R_kgDOPdIO7g"
+repoId = "R_kgDOPdIO7g"
 category = "General"
-category-id = "DIC_kwDOPdIO7s4CuHsy"
+categoryId = "DIC_kwDOPdIO7s4CuHsy"
 mapping = "url"
-strict = 0
-reactions-enabled = 1
-emit-metadata = 0
-input-position = "top"
+strict = "0"
+reactionsEnabled = "1"
+emitMetadata = "0"
+inputPosition = "top"
 theme = "light"
 lang = "en"
 loading = "lazy"
